# NebulaStore

./: Cargo.toml  README.md  state.snapshot
demo_outputs/: champion-cost-first.json  champion-reliability-first.json  champion-summary.md
demo_outputs/api_compare/: api-champion-balanced.json  api-champion-cost-first.json  api-champion-latency-first.json  api-champion-reliability-first.json
demo_outputs/multi_scenario/: multi-scenario-summary.csv  multi-scenario-summary.md
demo_outputs/multi_scenario/size10240_budget150000/: champion-balanced.json  champion-cost-first.json  champion-latency-first.json  champion-reliability-first.json  champion-summary.csv  champion-summary.md
demo_outputs/multi_scenario/size1024_budget18000/: champion-balanced.json  champion-cost-first.json  champion-latency-first.json  champion-reliability-first.json  champion-summary.csv  champion-summary.md
demo_outputs/multi_scenario/size120_budget3000/: champion-balanced.json  champion-latency-first.json  champion-summary.csv
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: demo_api_e2e.sh  demo_api_strategy_compare.sh  demo_multi_scenario.sh  demo_strategy_compare.sh
src/: api.rs  domain_service.rs  main.rs  model.rs  protocol.rs  state_store.rs
