[package]
edition = "2021"
name = "decentralized-storage"
version = "0.1.0"

[dependencies]
axum = {version = "0.7", features = ["multipart"]}
base64 = "0.22"
clap = {version = "4.5", features = ["derive"]}
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
tokio = {version = "1", features = ["full"]}
